--- a/testsite.html
+++ b/testsite.html
@@ -11,6 +11,6 @@
 <br>
 <br>
 <p style="text-align:center;"></p>
-<a href="file:///C:/Users/Ernar/Desktop/mysite3.html">go to the main page</a>
+<a href="https://as5454.github.io/hello.github.io/mysite3.html">go to the main page</a>
    </body>
 </html>
