--- a/testsite.html
+++ b/testsite.html
@@ -12,5 +12,6 @@
 <br>
 <p style="text-align:center;"></p>
 <a href="https://as5454.github.io/hello.github.io/mysite3.html">go to the main page</a>
+<img src="img/artworks-A1P64L4Vgg0yGaTJ-UAnYag-t500x500.jpg" 
    </body>
 </html>
